sample/error/e02704-ii.asn
E02704-II DEFINITIONS ::=
BEGIN
    setof SET OF INTEGER ::= {  -- E02704-II
        FALSE, 0.9, 'AC'H
    }
END
